kasm-chrome/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kasm-chrome
  namespace: kasm
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  serviceName: kasm-chrome
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kasm-chrome
  template:
    metadata:
      labels:
        app: kasm-chrome
        name: kasm-chrome
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'                
      containers:
      - name: kasm-chrome 
        image: kasmweb/chrome:latest
        imagePullPolicy: Always
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: false
        #   seccompProfile:
        #     type: RuntimeDefault
        #   capabilities:
        #     drop: ["ALL"]
        #     add:
        #     - "CHOWN"
        #     - "SETGID"
        #     - "SETUID"
        #     - "DAC_OVERRIDE"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8686
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        # volumeMounts:
        # - name: lidarr-config
        #   mountPath: /config
        # - name: media
        #   mountPath: /media
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      # volumes:
      #   - name: lidarr-config
      #     persistentVolumeClaim:
      #       claimName: longhorn-lidarr-config-pvc
      #   - name: media
      #     persistentVolumeClaim:
      #       claimName: nfs-media
