kasm-chrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kasm-chrome-service
  name: kasm-chrome-service
  namespace: kasm
spec:
  type: ClusterIP
  ports:
  - port: 6901
    protocol: TCP
    targetPort: 6901
    name: web
  selector:
    app: kasm-chrome
